tried adjusting height of map container so it fits screen. because it is set to absolute, the % doesnt wrap to the scree. need to figure out how to fix it

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,6 +1,6 @@
 .list-container {
   width: 300px;
-  height: 700px;
+  height: 95%;
   background-color: #FCFCFC;
   display: flex;
   flex-direction: column;
