--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,5 +1,5 @@
 .map-container {
     width: 100%;
-    height: 100%;
+    height:95%;
     background-color: antiquewhite;
 }
